# air-quality-monitoring

./: .gitignore  README.md
.github/workflows/: os-image.yml  purge-artifacts.yml
deploy/: setup.sh
deploy/lib/: grow.sh  prepare.sh  qualitair.service  setup.sh
qualitair/: __main__.py  api.py  config.py  data_daemon.py  db.py  pyproject.toml
qualitair/static/: index.html
